infra/kubernetes-dev/ingress-srv.yaml
#FOR DEVELOPMENT ENVIRONMENT, only change is the host route

#the metadata->annotations tells ingress we are trying to feed it some routing rules
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' #tells nginx some file paths will have regex
spec:
  rules:
    - host: abode.com #pretend domain name for now
      http:
        paths:
          - path: /api/users/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/frags/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: frags-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*) #anytime someone makes a request to this, we sent it to backend/service/
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /?(.*) #catches every other route
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
